# learn-x

./: README  README.md
learn-alpinejs/: example.html
learn-assembly/: README.md  commodity-hardware.md  commodity-hardware.org  low-level.org
learn-awk/: example-1.txt  learn-awk.awk
learn-bash/: 01-while-read-swap.sh  02-for-name-in-words-do-list.sh  05-if-list-then-list-else-list.sh  07-subshell.sh  08-group-command.sh  learn-bash-in-y-minutes.sh
learn-bun/: http-server.ts  sqlite.ts
learn-cats/: build.sbt
learn-chr/: 1-getting-started.pl
learn-clojure/: TODO.md  learnclojure.clj
learn-coq/: k.v
learn-cpp/: .gitignore  NOTE.md  README.md  genenv.cpp  iostream.cpp  math.cpp  note.org  person.cpp  run  set.cpp  shared_ptr.cpp  vector.cpp  wordexp.cpp
learn-crystal/: server.cr
learn-css/: index.html
learn-design-patterns/: README.md
learn-doobie/: build.sbt  connecting-to-a-database.sc  k.scala  k.sh
learn-emacs/: learning-emacs-and-elisp.org  mini-parentheses-editor.el  mini-parentheses-editor.org
learn-emscripten/: README.md
learn-fastify/: package-lock.json  package.json
learn-gas/: .gitignore  Makefile  README.md  TODO.md  makefile
learn-gcc/: p1.c  p1.s  p2.c  p2.s  p3.c  p3.s
learn-haskell/: .gitignore  Main.hs  README.md  Tree.hs  hi.hs  makefile  state.hs
learn-python/staring-mypy/: TODO.md  pyproject.toml
learn-python/staring-mypy/staring_mypy/: __init__.py
learn-python/starting-type/: pyproject.toml
learn-python/starting-type/staring_mypy/: type_alias.py
learn-python/starting-type/type/: type_pydantic.py
(+1096 files in other folders)
