[tool.poetry]
name = "staring-mypy"
version = "0.1.0"
description = ""
authors = ["Xie Yuheng <xyheme@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
